--- a/TODO.txt
+++ b/TODO.txt
@@ -2,8 +2,13 @@ Nicolas:
     - Modifying the code to fit the requirements of the project(No Awt or Swing in the model).
 Benjamin:
     - Working on concrete classes of Shapes
-        - DONE : Rectangle, Rectangle2D
-        - DOING: Triangle, Circle
+        - TODO: Optimization
+        - DOING:
+        - DONE : Rectangle, Rectangle2D, Circle
+    - Create test for classes: 
+        - TODO: ?
+        - DOING:
+        - DONE: Rectangle2D, Collisions(not a class)
 Bastien:
     - Finding a solution on how to launch the bird using the mouse more accuratly
 Eddy:
