--- a/TODO.txt
+++ b/TODO.txt
@@ -10,7 +10,7 @@ Benjamin:
         - DOING:
         - DONE: Rectangle2D, Collisions(not a class)
 Bastien:
-    - TODO: some testing
+    - TODO: some testing, Disable mouse input while the bird is flying
     - DONE: Finding a solution on how to launch the bird using the mouse more accuratly
     - DOING: Javadoc
 Eddy:
